# teccod

./: .gitignore  pyproject.toml
teccod/src/: task_1.py  task_2.py  task_3.py  task_4.py
teccod/tests/unit_tests/: test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py
