[tool.poetry]
name = "teccod"
version = "0.1.0"
description = "Test task for TECCOD"
authors = ["Dmitriy Sofronov <profos24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
